<resources>
    <string name="app_name">AppProject - CoronaTracker</string>
    <string name="service">A started service that runs in the background</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="getall">Get All</string>
    <string name="back">Back</string>
    <string name="notificationtitle">CoronaTracker Reminder</string>
    <string name="notificationtext">CoronaTracker text </string>
    <string name="pickoption">Please choose an option</string>
    <string name="maps">Maps</string>
    <string name="tracker">Tracker</string>
    <string name="logout">Log Out</string>
    <string name="welcome_login">Welcome</string>
    <string name="error_form_field_must_be_filled">Field must not be empty</string>
    <string name="error_invalid_email">E-mail invalid</string>
    <string name="msg_valid_password">Password valid</string>
    <string name="msg_invalid_password">Password invalid! 4–8 character password requiring numbers and alphabets of both cases</string>
    <string name="error_user_already_exists">User already exists!</string>
    <string name="passwords_not_matching">"Your passwords don't match. Try again"</string>
    <string name="you_have_completed_signup">"Congratulations, you are now signed up </string>
    <string name="user_already_signed_in">User is already signed in - going directly to MenuActivity</string>
    <string name="enter_password">Password</string>
    <string name="reenter_password">Reenter password</string>
    <string name="enter_email">Email </string>
    <string name="signup_btn">Sign Up</string>
    <string name="question_already_user">Already registered? Click here</string>
    <string name="question_not_a_user">Not registered? Click here</string>
    <string name="login">Login</string>
    <string name="logging_out_message">Logging out</string>
    <string name="spinner_gender_not_chosen">Hey! Choose a gender!</string>
    <string name="spinner_age_not_chosen">Hey! Choose an age!</string>
    <string name="spinner_other_diseases_not_chosen">Hey! Does the patient have other diseases?</string>
    <string name="spinner_status_not_chosen">Hey! Choose a status!</string>
    <string-array name="spin_age_maps">
        <item>Choose age</item>
        <item>0-15</item>
        <item>16-30</item>
        <item>31-45</item>
        <item>46-60</item>
        <item>Over 60</item>
    </string-array>
    <string-array name="spin_status_maps">
        <item>Status?</item>
        <item>Clean</item>
        <item>Infected</item>
        <item>Dead</item>
    </string-array>
    <string-array name="spin_gender_maps">
        <item>Choose gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="spin_otherdiseases_maps">
        <item>Other diseases?</item>
        <item>Yes</item>
        <item>No</item>
        <item>Unknown</item>
    </string-array>
    <string name="flag">Flag</string>
    <string name="mDelete" translatable="false">mDelete</string>
    <string name="country">Country</string>
    <string name="totalcases">Total Cases: </string>
    <string name="todayscount">New Cases:</string>
    <string name="totalcritical">Total Critical: </string>
    <string name="totaldeath">Total Death: </string>
    <string name="totalrecovered">Total Recovered: </string>
    <string name="activecases">Active cases: </string>
    <string name="totaltests">Total tests: </string>
    <string name="data0">0</string>
    <string name="moreinfo">For more information, \nplease press on the item</string>
    <string name="key_flag" translatable="false">flag</string>
    <string name="key_country" translatable="false">country</string>
    <string name="key_totalcases" translatable="false">totalcases</string>
    <string name="key_todayscases" translatable="false">Today\'s cases</string>
    <string name="key_totaldeaths" translatable="false">totaldeath</string>
    <string name="key_totalrecovered" translatable="false">totalrecovered</string>
    <string name="key_totalcritical" translatable="false">totalcritical</string>
    <string name="key_activecases" translatable="false">activecases</string>
    <string name="key_totaltests" translatable="false">totaltests</string>
    <string name="key_orientationchange" translatable="false">Orientation switch</string>
    <string name="key_broadcast_arraylist" translatable="false">Sending Arraylist through broadcast</string>
    <string name="advice1">Wash your hands frequently or sanitize your hands with an alcohol-based hand rub</string>
    <string name="advice2">Cough or sneeze into your sleeve - not your hands</string>
    <string name="advice3">Limit physical contact – avoid handshakes, refuse kisses on the cheek and avoid hugging</string>
    <string name="advice4">Be diligent with cleaning – both at home and in your workplace</string>
    <string name="advice5">Keep your distance and ask others to be considerate</string>
    <string name="notes">Notes:</string>
    <string name="status">Status:</string>
    <string name="minebtn">Mine</string>
    <string name="allbtn">All</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="otherdiseases">Other diseases:</string>
    <string name="et_please_insert_notes">Write here</string>
    <string name="no_markers_registered_yet">No markers saved yet</string>
    <string name="user_s_notes">User\'s notes</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome!</string>
</resources>
