<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <EditText
        android:id="@+id/et_email_signup"
        android:layout_width="242dp"
        android:layout_height="0dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="61dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        app:layout_constraintBottom_toTopOf="@+id/et_password_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_repassword_signup"
        android:layout_width="245dp"
        android:layout_height="0dp"
        android:layout_marginBottom="51dp"
        android:inputType="textPassword"
        android:hint="@string/reenter_password"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_signup" />

    <EditText
        android:id="@+id/et_password_signup"
        android:layout_width="243dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        app:layout_constraintBottom_toTopOf="@+id/et_repassword_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_signup" />

    <Button
        android:id="@+id/btn_signup_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:text="@string/signup_btn"
        app:layout_constraintBottom_toTopOf="@+id/tv_alreadyuser_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repassword_signup" />

    <TextView
        android:id="@+id/tv_alreadyuser_signup"
        android:layout_width="236dp"
        android:layout_height="0dp"
        android:layout_marginBottom="96dp"
        android:gravity="center"
        android:text="@string/question_already_user"
        android:textColor="#080808"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup_signup" />
</androidx.constraintlayout.widget.ConstraintLayout>