<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    >

    <ImageView
        android:id="@+id/flag"
        android:layout_width="123dp"
        android:layout_height="128dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/flag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtCountryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/flag"
        android:text="@string/country"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/flag"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMoreInfo"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/moreinfo"
        app:layout_constraintStart_toEndOf="@+id/flag"
        app:layout_constraintTop_toBottomOf="@+id/txtCountryName" />


    <ImageView
        android:id="@+id/mDeleteImage"
        android:layout_width="75dp"
        android:layout_height="86dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>