<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    >

    <ImageView
        android:id="@+id/mDetailsFlag"
        android:layout_width="413dp"
        android:layout_height="160dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <View
        android:id="@+id/viewPicture"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mDetailsFlag" />


    <TextView
        android:id="@+id/mDetailsCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/country"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mDetailsFlag" />

    <View
        android:id="@+id/viewBetweenTxtCountryAndTotalCases"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mDetailsCountry" />

    <TextView
        android:id="@+id/mDetailsTotalCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/totalcases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBetweenTxtCountryAndTotalCases" />

    <TextView
        android:id="@+id/mDetailsTotalCasesText"
        android:layout_width="54dp"
        android:layout_height="19dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/data0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toEndOf="@+id/mDetailsTotalCases"
        app:layout_constraintTop_toBottomOf="@+id/viewBetweenTxtCountryAndTotalCases" />

    <View
        android:id="@+id/viewBetweenTotalCasesAndAnotherTxt"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mDetailsTotalCasesText" />

    <TextView
        android:id="@+id/mDetailsTodaysCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:text="@string/todayscount"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/horizonalView"

        app:layout_constraintTop_toBottomOf="@+id/viewBetweenTotalCasesAndAnotherTxt" />

    <TextView
        android:id="@+id/mDetailsTodaysCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/data0"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/horizonalView"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mDetailsTodaysCount" />

    <View
        android:id="@+id/horizonalView"
        android:layout_width="1dp"
        android:layout_marginStart="212dp"
        app:layout_constraintBottom_toTopOf="@+id/viewAboveBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewBetweenTotalCasesAndAnotherTxt"
        app:layout_constraintVertical_bias="1.0"
        android:layout_height="0dp" />


    <View
        android:id="@+id/viewAboveBtn"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mDetailsTotalCriticalText" />

    <TextView
        android:id="@+id/mDetailsTotalCritical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/totalcritical"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/horizonalView"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mDetailsTodaysCountText" />

    <TextView
        android:id="@+id/mDetailsTotalCriticalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/data0"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/horizonalView"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mDetailsTotalCritical" />

    <TextView
        android:id="@+id/mDetailsTotalDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/totaldeath"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toEndOf="@+id/horizonalView"
        app:layout_constraintTop_toTopOf="@+id/horizonalView" />

    <TextView
        android:id="@+id/mDetailsTotalDeathsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/data0"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toEndOf="@+id/horizonalView"
        app:layout_constraintTop_toBottomOf="@+id/mDetailsTotalDeaths" />

    <TextView
        android:id="@+id/mDetailsTotalRecovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/totalrecovered"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/horizonalView"
        app:layout_constraintTop_toBottomOf="@+id/mDetailsTotalDeathsText" />

    <TextView
        android:id="@+id/mDetailsTotalRecoveredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/data0"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toEndOf="@+id/horizonalView"
        app:layout_constraintTop_toBottomOf="@+id/mDetailsTotalRecovered" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorBtn"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAboveBtn"
        android:onClick="mDetailsBackBtn"

        />


</androidx.constraintlayout.widget.ConstraintLayout>